# QtOpenGuidance

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  QtOpenGuidance.desktop  QtOpenGuidance.kdev4  QtOpenGuidance.pro  README.md  build-paths.pri
android/: .gitignore  AndroidManifest.xml
cmake/modules/: UNIFY.cmake
config/: config-tractor-2trailer-console.json  config-tractor-2trailer.json  config-tractor-trailer.json  docks.json  field-latency-testcase.json  field-minimal-testcase.json  grid-minimal-testcase.json  minimal.json  nmea-parser.json
config.tests/serialport/: main.cpp  serialport.pro
config.tests/spnav/: main.cpp  spnav.pro
lib/: .gitignore  UBX_Parser.pri  cgal.pri  dubins_curves.pri  eigen.pri  geographiclib.pri  kalman.pri  qcustomplot.pri
lib/QCustomPlot/: qcustomplot.cpp
res/: ressources.qrc
src/: AckermannKinematic.cpp  AckermannKinematic.h  CompressorApplication.h  GuidanceBase.h  PoseCache.h  PoseSimulation.cpp  PoseSimulation.h  TractorModel.cpp  TractorModel.h  cameracontroller.h  cgal.h  cgalKernel.h  main.cpp  pch.h
src/3d/: 3d-moc.cpp  ArrowTexture.cpp  ArrowTexture.h  BufferMesh.cpp  BufferMesh.h  BufferMeshGeometry.cpp  BufferMeshGeometry.h  BufferMeshGeometryView.cpp  BufferMeshGeometryView.h  BufferMeshGeometryViewWithNormals.cpp  BufferMeshGeometryViewWithNormals.h  BufferMeshGeometryWithNormal.cpp  BufferMeshGeometryWithNormal.h  BufferMeshGeometryWithNormals.cpp  BufferMeshGeometryWithNormals.h  BufferMeshWithNormal.cpp  BufferMeshWithNormal.h  BufferMeshWithNormals.cpp  BufferMeshWithNormals.h  CultivatedAreaMesh.cpp  CultivatedAreaMesh.h  CultivatedAreaMeshGeometry.cpp  CultivatedAreaMeshGeometry.h  CultivatedAreaMeshGeometryView.cpp  CultivatedAreaMeshGeometryView.h  LineSizeRenderState.cpp  LineSizeRenderState.h  TractorModel.cpp  TractorModel.h  TrailerModel.cpp  TrailerModel.h  arrowTexture.h  cameracontroller.h  drawline.cpp  drawline.h  drawpoints.cpp  drawpoints.h  linemesh.cpp  linemesh.h  linemeshgeometry.cpp  (+8 more)
src/aspect/: fpsaspect.cpp  fpsaspect.h  fpsmonitor.cpp  fpsmonitor.h  fpsmonitorbackend.cpp  fpsmonitorbackend.h  movingaverage.cpp  movingaverage.h  updatefpsmonitorsjob.cpp  updatefpsmonitorsjob.h
src/block/: AckermannSteering.h  ActionDockBlock.h  AngularVelocityLimiter.h  ArithmeticAddition.h  ArithmeticDivision.h  ArithmeticMultiplication.h  ArithmeticSubtraction.h  BlockBase.cpp  BlockBase.h  CameraController.h  CommunicationJrk.h  CommunicationPgn7FFE.h  ComparisonEqualTo.h  ComparisonGreaterOrEqualTo.h  ComparisonGreaterThan.h  ComparisonLessOrEqualTo.h  ComparisonLessThan.h  ComparisonNotEqualTo.h  CultivatedAreaModel.cpp  CultivatedAreaModel.h  DebugSink.h  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.h  FieldManager.cpp  FieldManager.h  FileStream.h  FpsMeasurement.h  GlobalPlanner.cpp  GlobalPlanner.h  GlobalPlannerLines.cpp  GlobalPlannerLines.h  GlobalPlannerModel.h  GridModel.h  GuidanceBase.h  GuidanceGlobalPlanner.cpp  GuidanceGlobalPlanner.h  GuidanceGlobalPlannerModel.h  GuidanceLocalPlanner.h  GuidancePlannerGui.h  GuidanceStanley.h  (+67 more)
src/block/arithmetic/: ArithmeticAbsolute.cpp  ArithmeticAbsolute.h  ArithmeticAddition.cpp  ArithmeticAddition.h  ArithmeticClamp.cpp  ArithmeticClamp.h  ArithmeticDivision.cpp  ArithmeticDivision.h  ArithmeticMultiplication.cpp  ArithmeticMultiplication.h  ArithmeticNegation.cpp  ArithmeticNegation.h  (+2 more)
src/filter/: MeanMovingWindow.cpp  MeanMovingWindow.h  SlewRateLimiter.h
src/gui/: ActionDockBlockModel.cpp  ActionDockBlockModel.h  ActionToolbar.cpp  ActionToolbar.h  ActionToolbar.ui  CameraToolbar.cpp  CameraToolbar.h  CameraToolbar.ui  FieldsOptimitionToolbar.cpp  FieldsOptimitionToolbar.h  FieldsOptimitionToolbar.ui  FieldsToolbar.cpp  FieldsToolbar.h  FieldsToolbar.ui  FontComboboxDelegate.cpp  FontComboboxDelegate.h  GlobalPlannerToolbar.cpp  GlobalPlannerToolbar.h  GlobalPlannerToolbar.ui  GuidanceMeterBar.cpp  GuidanceMeterBar.h  GuidanceMeterBar.ui  GuidanceToolbar.cpp  GuidanceToolbar.h  GuidanceToolbar.ui  GuidanceToolbarTop.cpp  GuidanceToolbarTop.h  GuidanceToolbarTop.ui  GuidanceTurning.cpp  GuidanceTurning.h  GuidanceTurning.ui  GuidanceTurningToolbar.cpp  GuidanceTurningToolbar.h  GuidanceTurningToolbar.ui  GuidanceXteBar.cpp  GuidanceXteBar.h  GuidanceXteBar.ui  ImplementBlockModel.cpp  ImplementBlockModel.h  ImplementSectionModel.cpp  (+88 more)
src/helpers/: BlocksManager.cpp  BlocksManager.h  FactoriesManager.cpp  FactoriesManager.h  GeoJsonHelper.cpp  GeoJsonHelper.h  GeographicConvertionWrapper.cpp  GeographicConvertionWrapper.h  ObjectManager.cpp  ObjectManager.h  RateLimiter.cpp  RateLimiter.h  SchmittTrigger.h  a.out  anglesHelper.h  cgalHelper.cpp  cgalHelper.h  eigenHelper.cpp  eigenHelper.h  eigenTest.cpp  normalizeAngles.h  signatures.h
src/job/: ConnectPointsJob.cpp  ConnectPointsJob.h  CultivatedAreaOptimitionController.cpp  CultivatedAreaOptimitionController.h  FieldOptimitionController.cpp  FieldOptimitionController.h  PlanOptimitionController.cpp  PlanOptimitionController.h  TestCollinearityJob.cpp  TestCollinearityJob.h
src/kinematic/: CalculationOptions.h  CgalWorker.cpp  CgalWorker.h  Field.h  FixedKinematic.h  FixedKinematicPrimitive.cpp  FixedKinematicPrimitive.h  GeographicConvertionWrapper.h  PathPrimitive.cpp  PathPrimitive.h  PathPrimitiveArc.cpp  PathPrimitiveArc.h  PathPrimitiveCircle.cpp  PathPrimitiveCircle.h  PathPrimitiveLine.cpp  PathPrimitiveLine.h  PathPrimitiveRay.cpp  PathPrimitiveRay.h  PathPrimitiveSegment.cpp  PathPrimitiveSegment.h  PathPrimitiveSequence.cpp  PathPrimitiveSequence.h  Plan.cpp  Plan.h  PlanGlobal.cpp  PlanGlobal.h  PoseOptions.h  Tile.h  TrailerKinematic.h  TrailerKinematicPrimitive.h  TransverseMercatorWrapper.h  cgal.h  cgalKernel.h  eigenHelper.h  kinematic-moc.cpp
src/qnodeseditor/: main.cpp  qneblock.cpp  qneblock.h  qneconnection.cpp  qneconnection.h  qnegestures.cpp  qnegestures.h  qnegraphicsview.cpp  qnegraphicsview.h  qnemainwindow.cpp  qnemainwindow.h  qneport.cpp  qneport.h  qnodeeditor.pri  qnodeseditor-moc.cpp  qnodeseditor.cpp  qnodeseditor.h
(+260 files in other folders)
